--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,3 +1,6 @@
-{{>avatar}}
 <h1>Üdvözöllek {{name}}!</h1>
-<p>Az email címed: {{email}}</p>
+{{>avatar}}
+<ul>
+    <li>Felhasználóneved: {{name}}</li>
+    <li>Email címed: {{email}}</li>
+</ul>
