--- a/views/partials/footer.hbs
+++ b/views/partials/footer.hbs
@@ -1,4 +1,4 @@
-Copyright © <span id="year"></span> Example
+Copyright © <span id="year"></span>
 <script>
     document.getElementById("year").innerText = new Date().getFullYear();
 </script>
