--- a/views/partials/head.hbs
+++ b/views/partials/head.hbs
@@ -2,4 +2,4 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 <link rel="stylesheet" href="/style/main.css" />
 <link rel="shortcut icon" type="image/x-icon" href="/images/favicon.ico" />
-<title>Felhasználói hitelesítés példa</title>
+<title>Passport Template</title>
