--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,6 +1,9 @@
 <h1>Üdvözöllek {{name}}!</h1>
 {{>avatar}}
-<ul>
-    <li>Felhasználóneved: {{name}}</li>
-    <li>Email címed: {{email}}</li>
-</ul>
+<div class="user">
+    <ul>
+        <li><b>Felhasználóneved:</b> {{name}}</li>
+        <li><b>Email címed:</b> {{email}}</li>
+        <li><b>Regisztráltál:</b> {{date}}</li>
+    </ul>
+</div>
