--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,9 +1,9 @@
 <h1>Üdvözöllek {{name}}!</h1>
 {{>avatar}}
 <div class="user">
-    <ul>
-        <li><b>Felhasználóneved:</b> {{name}}</li>
-        <li><b>Email címed:</b> {{email}}</li>
-        <li><b>Regisztráltál:</b> {{date}}</li>
-    </ul>
+    <table>
+        <tr><td><b>Felhasználóneved:</b></td><td>{{name}}</td></tr>
+        <tr><td><b>Email címed:</b></td><td>{{email}}</td></tr>
+        <tr><td><b>Regisztráltál:</b></td><td>{{date}}</td></tr>
+    </table>
 </div>
