--- a/public/style/main.css
+++ b/public/style/main.css
@@ -15,20 +15,13 @@ body {
   flex-grow: 1
 }
 
-header ul {
-  list-style-type: none;
-  margin: 0;
-  margin-bottom: px;
-  padding: 0;
+.topnav {
   overflow: hidden;
   background-color: #333;
 }
 
-header li {
+.topnav a {
   float: left;
-}
-
-header li a {
   display: block;
   color: white;
   text-align: center;
@@ -36,12 +29,46 @@ header li a {
   text-decoration: none;
 }
 
-header li a:hover:not(.active) {
+.topnav a:hover:not(.active):not(.icon) {
   background-color: #111;
 }
 
-.active {
+.topnav a.active {
   background-color: #4CAF50;
+}
+
+.topnav .icon {
+  display: none;
+}
+
+.topnav .github {
+  float: right;
+}
+
+@media screen and (max-width: 500px) {
+  .topnav a:not(:first-child) {
+    display: none;
+  }
+  .topnav a.icon {
+    float: right;
+    display: block;
+  }
+  .topnav .github {
+    float: left;
+  }
+  .topnav.responsive {
+    position: relative;
+  }
+  .topnav.responsive .icon {
+    position: absolute;
+    right: 0;
+    top: 0;
+  }
+  .topnav.responsive a {
+    float: none;
+    display: block;
+    text-align: left;
+  }
 }
 
 .container {
