--- a/views/login.hbs
+++ b/views/login.hbs
@@ -14,8 +14,5 @@
   </div>
 </form>
 {{#if success}}
-<script>
-  window.onload = function() { alert('Regisztráció sikerült, jelentkezz be!'); }
-  window.history.pushState("", "", '/login');
-</script>
+<script src="/script/login.js"></script>
 {{/if}}
