--- a/views/partials/header.hbs
+++ b/views/partials/header.hbs
@@ -1,10 +1,16 @@
-<ul>
+<div class="topnav" id="myTopnav">
 {{#if loggedIn}}
-  <li><a class="active" href="/">Felhasználó</a></li>
-  <li><a href="/logout">Kijelentkezés</a></li>
+  <a class="active" href="/">Felhasználó</a>
+  <a href="/logout">Kijelentkezés</a>
 {{else}}
-  <li><a{{#if atLogin}} class="active"{{/if}} href="/login">Bejelentkezés</a></li>
-  <li><a{{#if atRegister}} class="active"{{/if}} href="/register">Regisztráció</a></li>
+{{#if atLogin}}
+  <a class="active" href="/login">Bejelentkezés</a>
+  <a href="/register">Regisztráció</a>
+{{else}}
+  <a class="active" href="/register">Regisztráció</a>
+  <a href="/login">Bejelentkezés</a>
 {{/if}}
-  <li style="float:right;"><a href="https://github.com/szabolevi98/NodeJS-Passport-Template" target="_blank">GitHub</a></li>
-</ul>
+{{/if}}
+  <a href="https://github.com/szabolevi98/NodeJS-Passport-Template" class="github" target="_blank">GitHub</a>
+  <a href="javascript:void(0);" class="icon" onclick="responsive()"><i class="fa fa-bars"></i></a>
+</div>
