--- a/views/partials/header.hbs
+++ b/views/partials/header.hbs
@@ -1,4 +1,4 @@
-<div class="topnav" id="myTopnav">
+<div class="topnav" id="myTopnav">a
 {{#if loggedIn}}
   <a class="active" href="/">Felhasználó</a>
   <a href="/logout">Kijelentkezés</a>
