--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,9 +1,5 @@
 <h1>Üdvözöllek {{name}}!</h1>
 {{>avatar}}
-<div class="user">
-    <table>
-        <tr><td><b>Felhasználóneved:</b></td><td>{{name}}</td></tr>
-        <tr><td><b>Email címed:</b></td><td>{{email}}</td></tr>
-        <tr><td><b>Regisztráltál:</b></td><td>{{date}}</td></tr>
-    </table>
-</div>
+<p><b>Felhasználóneved:</b><br />{{name}}</p>
+<p><b>Email címed:</b><br />{{email}}</p>
+<p><b>Regisztráltál:</b><br />{{date}}</p>
