--- a/public/style/main.css
+++ b/public/style/main.css
@@ -6,6 +6,7 @@ body {
   margin: 0;
   display: flex; 
   flex-direction: column;
+  word-wrap: break-word;
 }
 
 .maincontainer {
@@ -45,7 +46,7 @@ body {
   float: right;
 }
 
-@media screen and (max-width: 500px) {
+@media screen and (max-width: 700px) {
   .topnav a:not(:first-child) {
     display: none;
   }
@@ -93,18 +94,7 @@ footer {
   font-size: 14px;
 }
 
-.user {
-  width: min-content;
-  margin: auto;
-}
-
-.user td {
-  vertical-align: top;
-  text-align: left;
-  padding: 4px 8px 4px 8px;
-}
-
-input[type=text], input[type=password], input[type=email], button {
+input[type=text], input[type=password], input[type=email], textarea {
   width: 100%;
   padding: 12px 20px;
   margin: 8px 0;
