--- a/views/register.hbs
+++ b/views/register.hbs
@@ -1,10 +1,10 @@
 <h1>{{title}}</h1>
+{{>avatar}}
 <form action="/register" method="POST">
-  {{>avatar}}
   <div class="container">
-    <input type="text" id="name" name="name" placeholder="Név..." required />
-    <input type="email" id="email" name="email" placeholder="Email..." required />
-    <input type="password" id="password" name="password" placeholder="Jelszó..." required />
+    <input type="text" id="name" name="name" placeholder="Név..." maxlength="25" minlength="3" required />
+    <input type="email" id="email" name="email" placeholder="Email..." maxlength="50" minlength="3" required />
+    <input type="password" id="password" name="password" placeholder="Jelszó..." maxlength="25" minlength="3" required />
     <input type="submit" value="Regisztráció" />
   </div>
 </form>
