--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -4,12 +4,6 @@
     {{>head}}
 </head>
 <body>
-    <header>
-        {{>header}}
-    </header>
-    {{>mainBody}}
-    <footer>
-        {{>footer}}
-    </footer>
+    {{>body}}
 </body>
 </html>
