--- a/views/partials/body.hbs
+++ b/views/partials/body.hbs
@@ -1,4 +1,10 @@
+<header>
+    {{>header}}
+</header>
 <div class="maincontainer">
     {{{body}}}
 </div>
+<footer>
+    {{>footer}}
+</footer>
 <script src="/script/func.js"></script>
