--- a/public/style/main.css
+++ b/public/style/main.css
@@ -66,7 +66,14 @@ body {
   float: right;
 }
 
+.topnav a:first-child {
+  display: none;
+}
+
 @media screen and (max-width: 700px) {
+  .topnav a:first-child {
+    display: block;
+  }
   .topnav a:not(:first-child) {
     display: none;
   }
@@ -86,10 +93,13 @@ body {
     right: 0;
     top: 0;
   }
-  .topnav.responsive a {
+  .topnav.responsive a:not(:first-child) {
     float: none;
     display: block;
     text-align: left;
+  }
+  .topnav.responsive a:first-child {
+    display: none;
   }
 }
 
