--- a/views/partials/header.hbs
+++ b/views/partials/header.hbs
@@ -1,4 +1,5 @@
 <div class="topnav" id="myTopnav">
+  <a href="javascript:void(0);" class="active" onclick="reload()">{{title}}</a>
 {{#if loggedIn}}
   <a {{#if atProfile}}class="active" {{/if}}href="/">Felhasználó</a>
   <a {{#if atSend}}class="active" {{/if}}href="/send">Üzenetküldés</a>
